version/0.20/_sources/examples/gallery_examples/01_additive_porosity.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/gallery_examples/01_additive_porosity.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_gallery_examples_01_additive_porosity.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_gallery_examples_01_additive_porosity.py:


Porosity analysis
=================

This example shows how to use PyAdditive to determine
porosity for a given material and machine parameter combinations.

Units are SI (m, kg, s, K) unless otherwise noted.

.. GENERATED FROM PYTHON SOURCE LINES 32-35

Perform required import and connect
-----------------------------------
Perform the required import and connect to the Additive service.

.. GENERATED FROM PYTHON SOURCE LINES 35-45

.. code-block:: Python


    from ansys.additive.core import (
        Additive,
        AdditiveMachine,
        PorosityInput,
        SimulationError,
    )

    additive = Additive()








.. GENERATED FROM PYTHON SOURCE LINES 46-50

Select material
---------------
Select a material. You can use the :meth:`~Additive.materials_list` method to
obtain a list of available materials.

.. GENERATED FROM PYTHON SOURCE LINES 50-53

.. code-block:: Python


    print("Available material names: {}".format(additive.materials_list()))





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Available material names: ['IN718', '17-4PH', 'Al357', 'Ti64', 'CoCr', '316L', 'IN625', 'AlSi10Mg']




.. GENERATED FROM PYTHON SOURCE LINES 54-56

You can obtain the parameters for a single material by passing a name
from the materials list to the :meth:`~Additive.material` method.

.. GENERATED FROM PYTHON SOURCE LINES 56-59

.. code-block:: Python


    material = additive.material("316L")








.. GENERATED FROM PYTHON SOURCE LINES 60-65

Specify machine parameters
--------------------------
Specify machine parameters by first creating an :class:`AdditiveMachine` object
and then assigning the desired values. All values are in SI units (m, kg, s, K)
unless otherwise noted.

.. GENERATED FROM PYTHON SOURCE LINES 65-71

.. code-block:: Python


    machine = AdditiveMachine()

    # Show available parameters
    print(machine)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    AdditiveMachine
    laser_power: 195 W
    scan_speed: 1.0 m/s
    heater_temperature: 80 °C
    layer_thickness: 5e-05 m
    beam_diameter: 0.0001 m
    starting_layer_angle: 57 °
    layer_rotation_angle: 67 °
    hatch_spacing: 0.0001 m
    slicing_stripe_width: 0.01 m





.. GENERATED FROM PYTHON SOURCE LINES 72-75

Set laser power and scan speed
------------------------------
Set the laser power and scan speed.

.. GENERATED FROM PYTHON SOURCE LINES 75-79

.. code-block:: Python


    machine.scan_speed = 1.2  # m/s
    machine.laser_power = 250  # W








.. GENERATED FROM PYTHON SOURCE LINES 80-83

Specify inputs for porosity simulation
--------------------------------------
Create a :class:`PorosityInput` object containing the desired simulation parameters.

.. GENERATED FROM PYTHON SOURCE LINES 83-92

.. code-block:: Python


    input = PorosityInput(
        machine=machine,
        material=material,
        size_x=0.001,  # meters
        size_y=0.001,
        size_z=0.001,
    )








.. GENERATED FROM PYTHON SOURCE LINES 93-99

Run simulation
--------------
Use the :meth:`~Additive.simulate` method of the ``additive`` object to run the simulation.
The returned object is either a :class:`PorositySummary` object
containing the input and the relative density of the simulated sample or a
:class:`SimulationError` object.

.. GENERATED FROM PYTHON SOURCE LINES 99-104

.. code-block:: Python


    summary = additive.simulate(input)
    if isinstance(summary, SimulationError):
        raise Exception(summary.message)








.. GENERATED FROM PYTHON SOURCE LINES 105-107

Print relative density
----------------------

.. GENERATED FROM PYTHON SOURCE LINES 107-111

.. code-block:: Python


    print(f"For {summary.input.material.name} with \n", summary.input.machine)
    print(f"\n    relative density = {round(summary.relative_density, 5)}")





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    For 316L with 
     AdditiveMachine
    laser_power: 250 W
    scan_speed: 1.2 m/s
    heater_temperature: 80 °C
    layer_thickness: 5e-05 m
    beam_diameter: 0.0001 m
    starting_layer_angle: 57 °
    layer_rotation_angle: 67 °
    hatch_spacing: 0.0001 m
    slicing_stripe_width: 0.01 m


        relative density = 0.99999




.. GENERATED FROM PYTHON SOURCE LINES 112-115

Print the simulation logs
-------------------------
To print the simulation logs, use the :meth:`~PorositySummary.logs` property.

.. GENERATED FROM PYTHON SOURCE LINES 115-117

.. code-block:: Python


    print(summary.logs)




.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    File: thermal-log.log
    Thu May 29 21:40:29 2025 -> SOLVERINFO: Number of elements traveled by laser per step: 1.200000
    Thu May 29 21:40:31 2025 -> DESKTOPINFO: License successfully obtained.
    Thu May 29 21:40:31 2025 -> SOLVERINFO: Skipping HPC license checkout as 4 are being requested.
    Thu May 29 21:40:31 2025 -> USERINFO: Starting ThermalSolver v33.2.5, SolverCommon v14.108.0
    Thu May 29 21:40:31 2025 -> SOLVERINFO: Begin Run
    Thu May 29 21:40:31 2025 -> DESKTOPINFO: Using 4 threads for solver
    Thu May 29 21:40:31 2025 -> SOLVERINFO: PartX: 0.001000
    Thu May 29 21:40:31 2025 -> SOLVERINFO: PartY: 0.001000
    Thu May 29 21:40:31 2025 -> SOLVERINFO: ZoomZ: 0.000400
    Thu May 29 21:40:31 2025 -> SOLVERINFO: XYResolution: 0.000025
    Thu May 29 21:40:31 2025 -> SOLVERINFO: MeshLayersPerLayer: 4
    Thu May 29 21:40:31 2025 -> SOLVERINFO: LayerThickness: 0.000050
    Thu May 29 21:40:31 2025 -> SOLVERINFO: ZResolution: 0.000010
    Thu May 29 21:40:31 2025 -> SOLVERINFO: MeshPadding: 0.000400
    Thu May 29 21:40:31 2025 -> SOLVERINFO: PlateThickness: 0.010000
    Thu May 29 21:40:31 2025 -> SOLVERINFO: NumberOfDepositLayers: 20
    Thu May 29 21:40:31 2025 -> USERINFO: Total number of deposit layers: 20
    Thu May 29 21:40:31 2025 -> USERINFO: Total number of solution layers: 20
    Thu May 29 21:40:31 2025 -> SOLVERINFO: StepTime: 0.000025
    Thu May 29 21:40:31 2025 -> SOLVERINFO: ScanSpeed: 1.200000
    Thu May 29 21:40:31 2025 -> SOLVERINFO: BeamDiameter: 0.000100
    Thu May 29 21:40:31 2025 -> SOLVERINFO: LaserWattage: 250.000000
    Thu May 29 21:40:31 2025 -> SOLVERINFO: TotalCoolingTime: 0.001000
    Thu May 29 21:40:31 2025 -> SOLVERINFO: HeaterTemperature: 353.150000
    Thu May 29 21:40:31 2025 -> SOLVERINFO: InterScanTime: 0.000500
    Thu May 29 21:40:31 2025 -> SOLVERINFO: FluxModelName: timeint-gauss
    Thu May 29 21:40:31 2025 -> SOLVERINFO: MaterialID: -1
    Thu May 29 21:40:31 2025 -> SOLVERINFO: LookupFilePath: /tmp/additive/610abe2d2ae55/material-thermal-data.csv
    Thu May 29 21:40:31 2025 -> SOLVERINFO: MeanFreePathInPowder: 11669.916045
    Thu May 29 21:40:31 2025 -> SOLVERINFO: MeanFreePathInBulk: 11669.916045
    Thu May 29 21:40:31 2025 -> SOLVERINFO: ScanPatternFilePath: /tmp/additive/610abe2d2ae55/hatch-files/LaserPosition
    Thu May 29 21:40:31 2025 -> SOLVERINFO: NumberOfBufferLayers: 1
    Thu May 29 21:40:31 2025 -> SOLVERINFO: DisableThermalCalculation: 0
    Thu May 29 21:40:31 2025 -> SOLVERINFO: ThermalCalculationInterval: 1
    Thu May 29 21:40:31 2025 -> SOLVERINFO: DisableStatemapCorrection: 0
    Thu May 29 21:40:31 2025 -> SOLVERINFO: UseMinimumMeltPool: 1
    Thu May 29 21:40:31 2025 -> SOLVERINFO: StrainMethod: NONE
    Thu May 29 21:40:31 2025 -> SOLVERINFO: OutputMeltpool: 0
    Thu May 29 21:40:31 2025 -> SOLVERINFO: OutputStateMap: 1
    Thu May 29 21:40:31 2025 -> SOLVERINFO: StateMapFileOutputPath: /tmp/additive/610abe2d2ae55/statemap/
    Thu May 29 21:40:31 2025 -> SOLVERINFO: StateMapRefinement: 4
    Thu May 29 21:40:31 2025 -> SOLVERINFO: OutputVirtualSensorDataAsBinary: 1
    Thu May 29 21:40:31 2025 -> SOLVERINFO: OutputCoaxialAverageSensor: 0
    Thu May 29 21:40:31 2025 -> SOLVERINFO: OutputCoaxialFullThermalSensor: 0
    Thu May 29 21:40:31 2025 -> SOLVERINFO: OutputPointProbe: 0
    Thu May 29 21:40:31 2025 -> SOLVERINFO: OutputMicrostructureSensor: 0
    Thu May 29 21:40:31 2025 -> SOLVERINFO: OutputStationaryFullThermalSensor: 0
    Thu May 29 21:40:31 2025 -> SOLVERINFO: SolverRelativeTolerance: 0.000000
    Thu May 29 21:40:31 2025 -> SOLVERINFO: SolverAbsoluteTolerance: 0.000001
    Thu May 29 21:40:31 2025 -> SOLVERINFO: ExplicitSolutionLength: 0.003000
    Thu May 29 21:40:31 2025 -> SOLVERINFO: FarRegionResolutionMultiplier: 2
    Thu May 29 21:40:31 2025 -> SOLVERINFO: MaxTemperatureCap: 3186.000000
    Thu May 29 21:40:31 2025 -> SOLVERINFO: ModifiedBaseTemperature: 354.150000
    Thu May 29 21:40:31 2025 -> SOLVERINFO: MonotonicThermalHistoryOn: 1
    Thu May 29 21:40:31 2025 -> SOLVERINFO: TailCutoffLength: 0.000174
    Thu May 29 21:40:31 2025 -> SOLVERINFO: SurfaceRoughnessAnalysis: 0
    Thu May 29 21:40:31 2025 -> SOLVERINFO: BallingAnalysis: 0
    Thu May 29 21:40:31 2025 -> SOLVERINFO: KeyHoleAnalysis: 0
    Thu May 29 21:40:31 2025 -> SOLVERINFO: SolutionAssemblerType: transition-distance-blending
    Thu May 29 21:40:34 2025 -> USERINFO: Explicit Solution -> PercentComplete: 0.5
    Thu May 29 21:40:34 2025 -> USERINFO: Explicit Solution -> PercentComplete: 1
    Thu May 29 21:40:34 2025 -> USERINFO: Explicit Solution -> PercentComplete: 1.5
    Thu May 29 21:40:34 2025 -> USERINFO: Explicit Solution -> PercentComplete: 2
    Thu May 29 21:40:35 2025 -> USERINFO: Explicit Solution -> PercentComplete: 2.5
    Thu May 29 21:40:35 2025 -> USERINFO: Explicit Solution -> PercentComplete: 3
    Thu May 29 21:40:35 2025 -> USERINFO: Explicit Solution -> PercentComplete: 3.5
    Thu May 29 21:40:35 2025 -> USERINFO: Explicit Solution -> PercentComplete: 4
    Thu May 29 21:40:35 2025 -> USERINFO: Explicit Solution -> PercentComplete: 4.5
    Thu May 29 21:40:36 2025 -> USERINFO: Explicit Solution -> PercentComplete: 5
    Thu May 29 21:40:36 2025 -> USERINFO: Explicit Solution -> PercentComplete: 5.5
    Thu May 29 21:40:36 2025 -> USERINFO: Explicit Solution -> PercentComplete: 6
    Thu May 29 21:40:36 2025 -> USERINFO: Explicit Solution -> PercentComplete: 6.5
    Thu May 29 21:40:37 2025 -> USERINFO: Explicit Solution -> PercentComplete: 7
    Thu May 29 21:40:37 2025 -> USERINFO: Explicit Solution -> PercentComplete: 7.5
    Thu May 29 21:40:37 2025 -> USERINFO: Explicit Solution -> PercentComplete: 8
    Thu May 29 21:40:37 2025 -> USERINFO: Explicit Solution -> PercentComplete: 8.5
    Thu May 29 21:40:37 2025 -> USERINFO: Explicit Solution -> PercentComplete: 9
    Thu May 29 21:40:38 2025 -> USERINFO: Explicit Solution -> PercentComplete: 9.5
    Thu May 29 21:40:38 2025 -> USERINFO: Explicit Solution -> PercentComplete: 10
    Thu May 29 21:40:38 2025 -> USERINFO: Explicit Solution -> PercentComplete: 10.5
    Thu May 29 21:40:38 2025 -> USERINFO: Explicit Solution -> PercentComplete: 11
    Thu May 29 21:40:39 2025 -> USERINFO: Explicit Solution -> PercentComplete: 11.5
    Thu May 29 21:40:39 2025 -> USERINFO: Explicit Solution -> PercentComplete: 12
    Thu May 29 21:40:39 2025 -> USERINFO: Explicit Solution -> PercentComplete: 12.5
    Thu May 29 21:40:39 2025 -> USERINFO: Explicit Solution -> PercentComplete: 13
    Thu May 29 21:40:40 2025 -> USERINFO: Explicit Solution -> PercentComplete: 13.5
    Thu May 29 21:40:40 2025 -> USERINFO: Explicit Solution -> PercentComplete: 14
    Thu May 29 21:40:40 2025 -> USERINFO: Explicit Solution -> PercentComplete: 14.5
    Thu May 29 21:40:40 2025 -> USERINFO: Explicit Solution -> PercentComplete: 15
    Thu May 29 21:40:40 2025 -> USERINFO: Explicit Solution -> PercentComplete: 15.5
    Thu May 29 21:40:41 2025 -> USERINFO: Explicit Solution -> PercentComplete: 16
    Thu May 29 21:40:41 2025 -> USERINFO: Explicit Solution -> PercentComplete: 16.5
    Thu May 29 21:40:41 2025 -> USERINFO: Explicit Solution -> PercentComplete: 17
    Thu May 29 21:40:41 2025 -> USERINFO: Explicit Solution -> PercentComplete: 17.5
    Thu May 29 21:40:42 2025 -> USERINFO: Explicit Solution -> PercentComplete: 18
    Thu May 29 21:40:42 2025 -> USERINFO: Explicit Solution -> PercentComplete: 18.5
    Thu May 29 21:40:42 2025 -> USERINFO: Explicit Solution -> PercentComplete: 19
    Thu May 29 21:40:42 2025 -> USERINFO: Explicit Solution -> PercentComplete: 19.5
    Thu May 29 21:40:43 2025 -> USERINFO: Explicit Solution -> PercentComplete: 20
    Thu May 29 21:40:43 2025 -> USERINFO: Explicit Solution -> PercentComplete: 20.5
    Thu May 29 21:40:43 2025 -> USERINFO: Explicit Solution -> PercentComplete: 21
    Thu May 29 21:40:43 2025 -> USERINFO: Explicit Solution -> PercentComplete: 21.5
    Thu May 29 21:40:43 2025 -> USERINFO: Explicit Solution -> PercentComplete: 22
    Thu May 29 21:40:44 2025 -> USERINFO: Explicit Solution -> PercentComplete: 22.5
    Thu May 29 21:40:44 2025 -> USERINFO: Explicit Solution -> PercentComplete: 23
    Thu May 29 21:40:44 2025 -> USERINFO: Explicit Solution -> PercentComplete: 23.5
    Thu May 29 21:40:44 2025 -> USERINFO: Explicit Solution -> PercentComplete: 24
    Thu May 29 21:40:45 2025 -> USERINFO: Explicit Solution -> PercentComplete: 24.5
    Thu May 29 21:40:45 2025 -> USERINFO: Explicit Solution -> PercentComplete: 25
    Thu May 29 21:40:45 2025 -> USERINFO: Explicit Solution -> PercentComplete: 25.5
    Thu May 29 21:40:45 2025 -> USERINFO: Explicit Solution -> PercentComplete: 26
    Thu May 29 21:40:46 2025 -> USERINFO: Explicit Solution -> PercentComplete: 26.5
    Thu May 29 21:40:46 2025 -> USERINFO: Explicit Solution -> PercentComplete: 27
    Thu May 29 21:40:46 2025 -> USERINFO: Explicit Solution -> PercentComplete: 27.5
    Thu May 29 21:40:46 2025 -> USERINFO: Explicit Solution -> PercentComplete: 28
    Thu May 29 21:40:46 2025 -> USERINFO: Explicit Solution -> PercentComplete: 28.5
    Thu May 29 21:40:47 2025 -> USERINFO: Explicit Solution -> PercentComplete: 29
    Thu May 29 21:40:47 2025 -> USERINFO: Explicit Solution -> PercentComplete: 29.5
    Thu May 29 21:40:47 2025 -> USERINFO: Explicit Solution -> PercentComplete: 30
    Thu May 29 21:40:47 2025 -> USERINFO: Explicit Solution -> PercentComplete: 30.5
    Thu May 29 21:40:48 2025 -> USERINFO: Explicit Solution -> PercentComplete: 31
    Thu May 29 21:40:48 2025 -> USERINFO: Explicit Solution -> PercentComplete: 31.5
    Thu May 29 21:40:48 2025 -> USERINFO: Explicit Solution -> PercentComplete: 32
    Thu May 29 21:40:48 2025 -> USERINFO: Explicit Solution -> PercentComplete: 32.5
    Thu May 29 21:40:49 2025 -> USERINFO: Explicit Solution -> PercentComplete: 33
    Thu May 29 21:40:49 2025 -> USERINFO: Explicit Solution -> PercentComplete: 33.5
    Thu May 29 21:40:49 2025 -> USERINFO: Explicit Solution -> PercentComplete: 34
    Thu May 29 21:40:49 2025 -> USERINFO: Explicit Solution -> PercentComplete: 34.5
    Thu May 29 21:40:49 2025 -> USERINFO: Explicit Solution -> PercentComplete: 35
    Thu May 29 21:40:50 2025 -> USERINFO: Explicit Solution -> PercentComplete: 35.5
    Thu May 29 21:40:50 2025 -> USERINFO: Explicit Solution -> PercentComplete: 36
    Thu May 29 21:40:50 2025 -> USERINFO: Explicit Solution -> PercentComplete: 36.5
    Thu May 29 21:40:50 2025 -> USERINFO: Explicit Solution -> PercentComplete: 37
    Thu May 29 21:40:51 2025 -> USERINFO: Explicit Solution -> PercentComplete: 37.5
    Thu May 29 21:40:51 2025 -> USERINFO: Explicit Solution -> PercentComplete: 38
    Thu May 29 21:40:51 2025 -> USERINFO: Explicit Solution -> PercentComplete: 38.5
    Thu May 29 21:40:51 2025 -> USERINFO: Explicit Solution -> PercentComplete: 39
    Thu May 29 21:40:52 2025 -> USERINFO: Explicit Solution -> PercentComplete: 39.5
    Thu May 29 21:40:52 2025 -> USERINFO: Explicit Solution -> PercentComplete: 40
    Thu May 29 21:40:52 2025 -> USERINFO: Explicit Solution -> PercentComplete: 40.5
    Thu May 29 21:40:52 2025 -> USERINFO: Explicit Solution -> PercentComplete: 41
    Thu May 29 21:40:52 2025 -> USERINFO: Explicit Solution -> PercentComplete: 41.5
    Thu May 29 21:40:53 2025 -> USERINFO: Explicit Solution -> PercentComplete: 42
    Thu May 29 21:40:53 2025 -> USERINFO: Explicit Solution -> PercentComplete: 42.5
    Thu May 29 21:40:53 2025 -> USERINFO: Explicit Solution -> PercentComplete: 43
    Thu May 29 21:40:53 2025 -> USERINFO: Explicit Solution -> PercentComplete: 43.5
    Thu May 29 21:40:54 2025 -> USERINFO: Explicit Solution -> PercentComplete: 44
    Thu May 29 21:40:54 2025 -> USERINFO: Explicit Solution -> PercentComplete: 44.5
    Thu May 29 21:40:54 2025 -> USERINFO: Explicit Solution -> PercentComplete: 45
    Thu May 29 21:40:54 2025 -> USERINFO: Explicit Solution -> PercentComplete: 45.5
    Thu May 29 21:40:55 2025 -> USERINFO: Explicit Solution -> PercentComplete: 46
    Thu May 29 21:40:55 2025 -> USERINFO: Explicit Solution -> PercentComplete: 46.5
    Thu May 29 21:40:55 2025 -> USERINFO: Explicit Solution -> PercentComplete: 47
    Thu May 29 21:40:55 2025 -> USERINFO: Explicit Solution -> PercentComplete: 47.5
    Thu May 29 21:40:55 2025 -> USERINFO: Explicit Solution -> PercentComplete: 48
    Thu May 29 21:40:56 2025 -> USERINFO: Explicit Solution -> PercentComplete: 48.5
    Thu May 29 21:40:56 2025 -> USERINFO: Explicit Solution -> PercentComplete: 49
    Thu May 29 21:40:56 2025 -> USERINFO: Explicit Solution -> PercentComplete: 49.5
    Thu May 29 21:40:56 2025 -> USERINFO: Explicit Solution -> PercentComplete: 50
    Thu May 29 21:40:59 2025 -> USERINFO: Explicit Solution -> PercentComplete: 50.5
    Thu May 29 21:40:59 2025 -> USERINFO: Explicit Solution -> PercentComplete: 51
    Thu May 29 21:40:59 2025 -> USERINFO: Explicit Solution -> PercentComplete: 51.5
    Thu May 29 21:40:59 2025 -> USERINFO: Explicit Solution -> PercentComplete: 52
    Thu May 29 21:40:59 2025 -> USERINFO: Explicit Solution -> PercentComplete: 52.5
    Thu May 29 21:41:00 2025 -> USERINFO: Explicit Solution -> PercentComplete: 53
    Thu May 29 21:41:00 2025 -> USERINFO: Explicit Solution -> PercentComplete: 53.5
    Thu May 29 21:41:00 2025 -> USERINFO: Explicit Solution -> PercentComplete: 54
    Thu May 29 21:41:00 2025 -> USERINFO: Explicit Solution -> PercentComplete: 54.5
    Thu May 29 21:41:01 2025 -> USERINFO: Explicit Solution -> PercentComplete: 55
    Thu May 29 21:41:01 2025 -> USERINFO: Explicit Solution -> PercentComplete: 55.5
    Thu May 29 21:41:01 2025 -> USERINFO: Explicit Solution -> PercentComplete: 56
    Thu May 29 21:41:01 2025 -> USERINFO: Explicit Solution -> PercentComplete: 56.5
    Thu May 29 21:41:02 2025 -> USERINFO: Explicit Solution -> PercentComplete: 57
    Thu May 29 21:41:02 2025 -> USERINFO: Explicit Solution -> PercentComplete: 57.5
    Thu May 29 21:41:02 2025 -> USERINFO: Explicit Solution -> PercentComplete: 58
    Thu May 29 21:41:02 2025 -> USERINFO: Explicit Solution -> PercentComplete: 58.5
    Thu May 29 21:41:02 2025 -> USERINFO: Explicit Solution -> PercentComplete: 59
    Thu May 29 21:41:03 2025 -> USERINFO: Explicit Solution -> PercentComplete: 59.5
    Thu May 29 21:41:03 2025 -> USERINFO: Explicit Solution -> PercentComplete: 60
    Thu May 29 21:41:03 2025 -> USERINFO: Explicit Solution -> PercentComplete: 60.5
    Thu May 29 21:41:03 2025 -> USERINFO: Explicit Solution -> PercentComplete: 61
    Thu May 29 21:41:04 2025 -> USERINFO: Explicit Solution -> PercentComplete: 61.5
    Thu May 29 21:41:04 2025 -> USERINFO: Explicit Solution -> PercentComplete: 62
    Thu May 29 21:41:04 2025 -> USERINFO: Explicit Solution -> PercentComplete: 62.5
    Thu May 29 21:41:04 2025 -> USERINFO: Explicit Solution -> PercentComplete: 63
    Thu May 29 21:41:05 2025 -> USERINFO: Explicit Solution -> PercentComplete: 63.5
    Thu May 29 21:41:05 2025 -> USERINFO: Explicit Solution -> PercentComplete: 64
    Thu May 29 21:41:05 2025 -> USERINFO: Explicit Solution -> PercentComplete: 64.5
    Thu May 29 21:41:05 2025 -> USERINFO: Explicit Solution -> PercentComplete: 65
    Thu May 29 21:41:05 2025 -> USERINFO: Explicit Solution -> PercentComplete: 65.5
    Thu May 29 21:41:06 2025 -> USERINFO: Explicit Solution -> PercentComplete: 66
    Thu May 29 21:41:06 2025 -> USERINFO: Explicit Solution -> PercentComplete: 66.5
    Thu May 29 21:41:06 2025 -> USERINFO: Explicit Solution -> PercentComplete: 67
    Thu May 29 21:41:06 2025 -> USERINFO: Explicit Solution -> PercentComplete: 67.5
    Thu May 29 21:41:07 2025 -> USERINFO: Explicit Solution -> PercentComplete: 68
    Thu May 29 21:41:07 2025 -> USERINFO: Explicit Solution -> PercentComplete: 68.5
    Thu May 29 21:41:07 2025 -> USERINFO: Explicit Solution -> PercentComplete: 69
    Thu May 29 21:41:07 2025 -> USERINFO: Explicit Solution -> PercentComplete: 69.5
    Thu May 29 21:41:08 2025 -> USERINFO: Explicit Solution -> PercentComplete: 70
    Thu May 29 21:41:08 2025 -> USERINFO: Explicit Solution -> PercentComplete: 70.5
    Thu May 29 21:41:08 2025 -> USERINFO: Explicit Solution -> PercentComplete: 71
    Thu May 29 21:41:08 2025 -> USERINFO: Explicit Solution -> PercentComplete: 71.5
    Thu May 29 21:41:08 2025 -> USERINFO: Explicit Solution -> PercentComplete: 72
    Thu May 29 21:41:09 2025 -> USERINFO: Explicit Solution -> PercentComplete: 72.5
    Thu May 29 21:41:09 2025 -> USERINFO: Explicit Solution -> PercentComplete: 73
    Thu May 29 21:41:09 2025 -> USERINFO: Explicit Solution -> PercentComplete: 73.5
    Thu May 29 21:41:09 2025 -> USERINFO: Explicit Solution -> PercentComplete: 74
    Thu May 29 21:41:10 2025 -> USERINFO: Explicit Solution -> PercentComplete: 74.5
    Thu May 29 21:41:10 2025 -> USERINFO: Explicit Solution -> PercentComplete: 75
    Thu May 29 21:41:10 2025 -> USERINFO: Explicit Solution -> PercentComplete: 75.5
    Thu May 29 21:41:10 2025 -> USERINFO: Explicit Solution -> PercentComplete: 76
    Thu May 29 21:41:11 2025 -> USERINFO: Explicit Solution -> PercentComplete: 76.5
    Thu May 29 21:41:11 2025 -> USERINFO: Explicit Solution -> PercentComplete: 77
    Thu May 29 21:41:11 2025 -> USERINFO: Explicit Solution -> PercentComplete: 77.5
    Thu May 29 21:41:11 2025 -> USERINFO: Explicit Solution -> PercentComplete: 78
    Thu May 29 21:41:12 2025 -> USERINFO: Explicit Solution -> PercentComplete: 78.5
    Thu May 29 21:41:12 2025 -> USERINFO: Explicit Solution -> PercentComplete: 79
    Thu May 29 21:41:12 2025 -> USERINFO: Explicit Solution -> PercentComplete: 79.5
    Thu May 29 21:41:12 2025 -> USERINFO: Explicit Solution -> PercentComplete: 80
    Thu May 29 21:41:12 2025 -> USERINFO: Explicit Solution -> PercentComplete: 80.5
    Thu May 29 21:41:13 2025 -> USERINFO: Explicit Solution -> PercentComplete: 81
    Thu May 29 21:41:13 2025 -> USERINFO: Explicit Solution -> PercentComplete: 81.5
    Thu May 29 21:41:13 2025 -> USERINFO: Explicit Solution -> PercentComplete: 82
    Thu May 29 21:41:13 2025 -> USERINFO: Explicit Solution -> PercentComplete: 82.5
    Thu May 29 21:41:14 2025 -> USERINFO: Explicit Solution -> PercentComplete: 83
    Thu May 29 21:41:14 2025 -> USERINFO: Explicit Solution -> PercentComplete: 83.5
    Thu May 29 21:41:14 2025 -> USERINFO: Explicit Solution -> PercentComplete: 84
    Thu May 29 21:41:14 2025 -> USERINFO: Explicit Solution -> PercentComplete: 84.5
    Thu May 29 21:41:15 2025 -> USERINFO: Explicit Solution -> PercentComplete: 85
    Thu May 29 21:41:15 2025 -> USERINFO: Explicit Solution -> PercentComplete: 85.5
    Thu May 29 21:41:15 2025 -> USERINFO: Explicit Solution -> PercentComplete: 86
    Thu May 29 21:41:15 2025 -> USERINFO: Explicit Solution -> PercentComplete: 86.5
    Thu May 29 21:41:16 2025 -> USERINFO: Explicit Solution -> PercentComplete: 87
    Thu May 29 21:41:16 2025 -> USERINFO: Explicit Solution -> PercentComplete: 87.5
    Thu May 29 21:41:16 2025 -> USERINFO: Explicit Solution -> PercentComplete: 88
    Thu May 29 21:41:16 2025 -> USERINFO: Explicit Solution -> PercentComplete: 88.5
    Thu May 29 21:41:16 2025 -> USERINFO: Explicit Solution -> PercentComplete: 89
    Thu May 29 21:41:17 2025 -> USERINFO: Explicit Solution -> PercentComplete: 89.5
    Thu May 29 21:41:17 2025 -> USERINFO: Explicit Solution -> PercentComplete: 90
    Thu May 29 21:41:17 2025 -> USERINFO: Explicit Solution -> PercentComplete: 90.5
    Thu May 29 21:41:17 2025 -> USERINFO: Explicit Solution -> PercentComplete: 91
    Thu May 29 21:41:18 2025 -> USERINFO: Explicit Solution -> PercentComplete: 91.5
    Thu May 29 21:41:18 2025 -> USERINFO: Explicit Solution -> PercentComplete: 92
    Thu May 29 21:41:18 2025 -> USERINFO: Explicit Solution -> PercentComplete: 92.5
    Thu May 29 21:41:18 2025 -> USERINFO: Explicit Solution -> PercentComplete: 93
    Thu May 29 21:41:19 2025 -> USERINFO: Explicit Solution -> PercentComplete: 93.5
    Thu May 29 21:41:19 2025 -> USERINFO: Explicit Solution -> PercentComplete: 94
    Thu May 29 21:41:19 2025 -> USERINFO: Explicit Solution -> PercentComplete: 94.5
    Thu May 29 21:41:19 2025 -> USERINFO: Explicit Solution -> PercentComplete: 95
    Thu May 29 21:41:20 2025 -> USERINFO: Explicit Solution -> PercentComplete: 95.5
    Thu May 29 21:41:20 2025 -> USERINFO: Explicit Solution -> PercentComplete: 96
    Thu May 29 21:41:20 2025 -> USERINFO: Explicit Solution -> PercentComplete: 96.5
    Thu May 29 21:41:20 2025 -> USERINFO: Explicit Solution -> PercentComplete: 97
    Thu May 29 21:41:20 2025 -> USERINFO: Explicit Solution -> PercentComplete: 97.5
    Thu May 29 21:41:21 2025 -> USERINFO: Explicit Solution -> PercentComplete: 98
    Thu May 29 21:41:21 2025 -> USERINFO: Explicit Solution -> PercentComplete: 98.5
    Thu May 29 21:41:21 2025 -> USERINFO: Explicit Solution -> PercentComplete: 99
    Thu May 29 21:41:21 2025 -> USERINFO: Explicit Solution -> PercentComplete: 99.5
    Thu May 29 21:41:22 2025 -> USERINFO: Explicit Solution -> PercentComplete: 100
    Thu May 29 21:41:22 2025 -> SOLVERINFO: Running with restricted thermal solution.
    Thu May 29 21:41:22 2025 -> SOLVERINFO: Total ScanLines in layer: 13
    Thu May 29 21:41:22 2025 -> USERINFO: Run Layer : 1
    Thu May 29 21:41:22 2025 -> SOLVERINFO: Total TimeSteps in layer: 339
    Thu May 29 21:41:23 2025 -> SOLVERINFO: Peak memory usage: 728.844 MBytes
    Thu May 29 21:41:23 2025 -> USERINFO: Completed deposit layer 1 (solution layer 1 of 20).
    Thu May 29 21:41:23 2025 -> SOLVERINFO: PercentComplete: 5
    Thu May 29 21:41:23 2025 -> SOLVERINFO: TIME: Layer Temperature map:  = 0.809 s, ( 92.07 %)
    Thu May 29 21:41:23 2025 -> SOLVERINFO: TIME:   FineSolidMap:  = 0.605 s, ( 68.90 %)
    Thu May 29 21:41:23 2025 -> SOLVERINFO: TIME:           fill:  = 0.527 s, ( 60.01 %)
    Thu May 29 21:41:23 2025 -> SOLVERINFO: TIME:           shift:  = 0.000 s, ( 0.05 %)
    Thu May 29 21:41:23 2025 -> SOLVERINFO: TIME:           update:  = 0.077 s, ( 8.81 %)
    Thu May 29 21:41:23 2025 -> SOLVERINFO: TIME:   Layer cooling calculation time:  = 0.012 s, ( 1.34 %)
    Thu May 29 21:41:23 2025 -> SOLVERINFO: TIME:   Layer copy-paste time:  = 0.142 s, ( 16.12 %)
    Thu May 29 21:41:23 2025 -> SOLVERINFO: TIME:   Layer sample line generation time:  = 0.014 s, ( 1.64 %)
    Thu May 29 21:41:23 2025 -> SOLVERINFO: TIME:   Layer sensor time (including output):  = 0.000 s, ( 0.00 %)
    Thu May 29 21:41:23 2025 -> SOLVERINFO: TIME:   Layer state initialization time:  = 0.000 s, ( 0.06 %)
    Thu May 29 21:41:23 2025 -> SOLVERINFO: TIME:   Layer state output time:  = 0.023 s, ( 2.61 %)
    Thu May 29 21:41:23 2025 -> SOLVERINFO: TIME:   Layer state update time:  = 0.617 s, ( 70.30 %)
    Thu May 29 21:41:23 2025 -> SOLVERINFO: TIME: Total layer time:  = 0.878282 s, (100.000000 %)
    Thu May 29 21:41:23 2025 -> SOLVERINFO: Total ScanLines in layer: 25
    Thu May 29 21:41:23 2025 -> USERINFO: Run Layer : 2
    Thu May 29 21:41:23 2025 -> SOLVERINFO: Total TimeSteps in layer: 344
    Thu May 29 21:41:23 2025 -> SOLVERINFO: Peak memory usage: 728.844 MBytes
    Thu May 29 21:41:23 2025 -> USERINFO: Completed deposit layer 2 (solution layer 2 of 20).
    Thu May 29 21:41:23 2025 -> SOLVERINFO: PercentComplete: 10
    Thu May 29 21:41:23 2025 -> SOLVERINFO: TIME: Layer Temperature map:  = 0.393 s, ( 87.32 %)
    Thu May 29 21:41:23 2025 -> SOLVERINFO: TIME:   FineSolidMap:  = 0.828 s, ( 184.11 %)
    Thu May 29 21:41:23 2025 -> SOLVERINFO: TIME:           fill:  = 0.703 s, ( 156.31 %)
    Thu May 29 21:41:23 2025 -> SOLVERINFO: TIME:           shift:  = 0.001 s, ( 0.18 %)
    Thu May 29 21:41:23 2025 -> SOLVERINFO: TIME:           update:  = 0.124 s, ( 27.52 %)
    Thu May 29 21:41:23 2025 -> SOLVERINFO: TIME:   Layer cooling calculation time:  = 0.012 s, ( 2.66 %)
    Thu May 29 21:41:23 2025 -> SOLVERINFO: TIME:   Layer copy-paste time:  = 0.118 s, ( 26.13 %)
    Thu May 29 21:41:23 2025 -> SOLVERINFO: TIME:   Layer sample line generation time:  = 0.006 s, ( 1.28 %)
    Thu May 29 21:41:23 2025 -> SOLVERINFO: TIME:   Layer sensor time (including output):  = 0.000 s, ( 0.01 %)
    Thu May 29 21:41:23 2025 -> SOLVERINFO: TIME:   Layer state initialization time:  = 0.000 s, ( 0.07 %)
    Thu May 29 21:41:23 2025 -> SOLVERINFO: TIME:   Layer state output time:  = 0.026 s, ( 5.79 %)
    Thu May 29 21:41:23 2025 -> SOLVERINFO: TIME:   Layer state update time:  = 0.231 s, ( 51.38 %)
    Thu May 29 21:41:23 2025 -> SOLVERINFO: TIME: Total layer time:  = 0.449956 s, (100.000000 %)
    Thu May 29 21:41:23 2025 -> SOLVERINFO: Total ScanLines in layer: 11
    Thu May 29 21:41:23 2025 -> USERINFO: Run Layer : 3
    Thu May 29 21:41:23 2025 -> SOLVERINFO: Total TimeSteps in layer: 336
    Thu May 29 21:41:24 2025 -> SOLVERINFO: Peak memory usage: 728.844 MBytes
    Thu May 29 21:41:24 2025 -> USERINFO: Completed deposit layer 3 (solution layer 3 of 20).
    Thu May 29 21:41:24 2025 -> SOLVERINFO: PercentComplete: 15
    Thu May 29 21:41:24 2025 -> SOLVERINFO: TIME: Layer Temperature map:  = 0.617 s, ( 89.67 %)
    Thu May 29 21:41:24 2025 -> SOLVERINFO: TIME:   FineSolidMap:  = 1.252 s, ( 182.09 %)
    Thu May 29 21:41:24 2025 -> SOLVERINFO: TIME:           fill:  = 1.048 s, ( 152.46 %)
    Thu May 29 21:41:24 2025 -> SOLVERINFO: TIME:           shift:  = 0.001 s, ( 0.16 %)
    Thu May 29 21:41:24 2025 -> SOLVERINFO: TIME:           update:  = 0.202 s, ( 29.36 %)
    Thu May 29 21:41:24 2025 -> SOLVERINFO: TIME:   Layer cooling calculation time:  = 0.005 s, ( 0.78 %)
    Thu May 29 21:41:24 2025 -> SOLVERINFO: TIME:   Layer copy-paste time:  = 0.137 s, ( 19.93 %)
    Thu May 29 21:41:24 2025 -> SOLVERINFO: TIME:   Layer sample line generation time:  = 0.010 s, ( 1.46 %)
    Thu May 29 21:41:24 2025 -> SOLVERINFO: TIME:   Layer sensor time (including output):  = 0.000 s, ( 0.01 %)
    Thu May 29 21:41:24 2025 -> SOLVERINFO: TIME:   Layer state initialization time:  = 0.000 s, ( 0.04 %)
    Thu May 29 21:41:24 2025 -> SOLVERINFO: TIME:   Layer state output time:  = 0.029 s, ( 4.23 %)
    Thu May 29 21:41:24 2025 -> SOLVERINFO: TIME:   Layer state update time:  = 0.435 s, ( 63.21 %)
    Thu May 29 21:41:24 2025 -> SOLVERINFO: TIME: Total layer time:  = 0.687678 s, (100.000000 %)
    Thu May 29 21:41:24 2025 -> SOLVERINFO: Total ScanLines in layer: 12
    Thu May 29 21:41:24 2025 -> USERINFO: Run Layer : 4
    Thu May 29 21:41:24 2025 -> SOLVERINFO: Total TimeSteps in layer: 343
    Thu May 29 21:41:25 2025 -> SOLVERINFO: Peak memory usage: 728.844 MBytes
    Thu May 29 21:41:25 2025 -> USERINFO: Completed deposit layer 4 (solution layer 4 of 20).
    Thu May 29 21:41:25 2025 -> SOLVERINFO: PercentComplete: 20
    Thu May 29 21:41:25 2025 -> SOLVERINFO: TIME: Layer Temperature map:  = 0.715 s, ( 90.72 %)
    Thu May 29 21:41:25 2025 -> SOLVERINFO: TIME:   FineSolidMap:  = 1.767 s, ( 224.14 %)
    Thu May 29 21:41:25 2025 -> SOLVERINFO: TIME:           fill:  = 1.479 s, ( 187.68 %)
    Thu May 29 21:41:25 2025 -> SOLVERINFO: TIME:           shift:  = 0.001 s, ( 0.17 %)
    Thu May 29 21:41:25 2025 -> SOLVERINFO: TIME:           update:  = 0.285 s, ( 36.17 %)
    Thu May 29 21:41:25 2025 -> SOLVERINFO: TIME:   Layer cooling calculation time:  = 0.006 s, ( 0.72 %)
    Thu May 29 21:41:25 2025 -> SOLVERINFO: TIME:   Layer copy-paste time:  = 0.140 s, ( 17.71 %)
    Thu May 29 21:41:25 2025 -> SOLVERINFO: TIME:   Layer sample line generation time:  = 0.011 s, ( 1.34 %)
    Thu May 29 21:41:25 2025 -> SOLVERINFO: TIME:   Layer sensor time (including output):  = 0.000 s, ( 0.01 %)
    Thu May 29 21:41:25 2025 -> SOLVERINFO: TIME:   Layer state initialization time:  = 0.000 s, ( 0.03 %)
    Thu May 29 21:41:25 2025 -> SOLVERINFO: TIME:   Layer state output time:  = 0.032 s, ( 4.10 %)
    Thu May 29 21:41:25 2025 -> SOLVERINFO: TIME:   Layer state update time:  = 0.527 s, ( 66.82 %)
    Thu May 29 21:41:25 2025 -> SOLVERINFO: TIME: Total layer time:  = 0.788195 s, (100.000000 %)
    Thu May 29 21:41:25 2025 -> SOLVERINFO: Total ScanLines in layer: 13
    Thu May 29 21:41:25 2025 -> USERINFO: Run Layer : 5
    Thu May 29 21:41:25 2025 -> SOLVERINFO: Total TimeSteps in layer: 338
    Thu May 29 21:41:26 2025 -> SOLVERINFO: Peak memory usage: 728.844 MBytes
    Thu May 29 21:41:26 2025 -> USERINFO: Completed deposit layer 5 (solution layer 5 of 20).
    Thu May 29 21:41:26 2025 -> SOLVERINFO: PercentComplete: 25
    Thu May 29 21:41:26 2025 -> SOLVERINFO: TIME: Layer Temperature map:  = 0.889 s, ( 92.43 %)
    Thu May 29 21:41:26 2025 -> SOLVERINFO: TIME:   FineSolidMap:  = 2.446 s, ( 254.44 %)
    Thu May 29 21:41:26 2025 -> SOLVERINFO: TIME:           fill:  = 2.076 s, ( 215.97 %)
    Thu May 29 21:41:26 2025 -> SOLVERINFO: TIME:           shift:  = 0.002 s, ( 0.17 %)
    Thu May 29 21:41:26 2025 -> SOLVERINFO: TIME:           update:  = 0.367 s, ( 38.18 %)
    Thu May 29 21:41:26 2025 -> SOLVERINFO: TIME:   Layer cooling calculation time:  = 0.006 s, ( 0.63 %)
    Thu May 29 21:41:26 2025 -> SOLVERINFO: TIME:   Layer copy-paste time:  = 0.140 s, ( 14.56 %)
    Thu May 29 21:41:26 2025 -> SOLVERINFO: TIME:   Layer sample line generation time:  = 0.015 s, ( 1.51 %)
    Thu May 29 21:41:26 2025 -> SOLVERINFO: TIME:   Layer sensor time (including output):  = 0.000 s, ( 0.00 %)
    Thu May 29 21:41:26 2025 -> SOLVERINFO: TIME:   Layer state initialization time:  = 0.000 s, ( 0.03 %)
    Thu May 29 21:41:26 2025 -> SOLVERINFO: TIME:   Layer state output time:  = 0.035 s, ( 3.69 %)
    Thu May 29 21:41:26 2025 -> SOLVERINFO: TIME:   Layer state update time:  = 0.692 s, ( 72.00 %)
    Thu May 29 21:41:26 2025 -> SOLVERINFO: TIME: Total layer time:  = 0.961254 s, (100.000000 %)
    Thu May 29 21:41:26 2025 -> SOLVERINFO: Total ScanLines in layer: 14
    Thu May 29 21:41:26 2025 -> USERINFO: Run Layer : 6
    Thu May 29 21:41:26 2025 -> SOLVERINFO: Total TimeSteps in layer: 342
    Thu May 29 21:41:27 2025 -> SOLVERINFO: Peak memory usage: 728.844 MBytes
    Thu May 29 21:41:27 2025 -> USERINFO: Completed deposit layer 6 (solution layer 6 of 20).
    Thu May 29 21:41:27 2025 -> SOLVERINFO: PercentComplete: 30
    Thu May 29 21:41:27 2025 -> SOLVERINFO: TIME: Layer Temperature map:  = 0.869 s, ( 92.26 %)
    Thu May 29 21:41:27 2025 -> SOLVERINFO: TIME:   FineSolidMap:  = 3.100 s, ( 329.17 %)
    Thu May 29 21:41:27 2025 -> SOLVERINFO: TIME:           fill:  = 2.647 s, ( 281.09 %)
    Thu May 29 21:41:27 2025 -> SOLVERINFO: TIME:           shift:  = 0.002 s, ( 0.20 %)
    Thu May 29 21:41:27 2025 -> SOLVERINFO: TIME:           update:  = 0.449 s, ( 47.72 %)
    Thu May 29 21:41:27 2025 -> SOLVERINFO: TIME:   Layer cooling calculation time:  = 0.007 s, ( 0.69 %)
    Thu May 29 21:41:27 2025 -> SOLVERINFO: TIME:   Layer copy-paste time:  = 0.142 s, ( 15.12 %)
    Thu May 29 21:41:27 2025 -> SOLVERINFO: TIME:   Layer sample line generation time:  = 0.014 s, ( 1.46 %)
    Thu May 29 21:41:27 2025 -> SOLVERINFO: TIME:   Layer sensor time (including output):  = 0.000 s, ( 0.01 %)
    Thu May 29 21:41:27 2025 -> SOLVERINFO: TIME:   Layer state initialization time:  = 0.000 s, ( 0.03 %)
    Thu May 29 21:41:27 2025 -> SOLVERINFO: TIME:   Layer state output time:  = 0.038 s, ( 4.08 %)
    Thu May 29 21:41:27 2025 -> SOLVERINFO: TIME:   Layer state update time:  = 0.667 s, ( 70.86 %)
    Thu May 29 21:41:27 2025 -> SOLVERINFO: TIME: Total layer time:  = 0.941830 s, (100.000000 %)
    Thu May 29 21:41:27 2025 -> SOLVERINFO: Total ScanLines in layer: 15
    Thu May 29 21:41:27 2025 -> USERINFO: Run Layer : 7
    Thu May 29 21:41:27 2025 -> SOLVERINFO: Total TimeSteps in layer: 337
    Thu May 29 21:41:27 2025 -> SOLVERINFO: Peak memory usage: 728.844 MBytes
    Thu May 29 21:41:27 2025 -> USERINFO: Completed deposit layer 7 (solution layer 7 of 20).
    Thu May 29 21:41:27 2025 -> SOLVERINFO: PercentComplete: 35
    Thu May 29 21:41:27 2025 -> SOLVERINFO: TIME: Layer Temperature map:  = 0.608 s, ( 89.65 %)
    Thu May 29 21:41:27 2025 -> SOLVERINFO: TIME:   FineSolidMap:  = 3.504 s, ( 516.51 %)
    Thu May 29 21:41:27 2025 -> SOLVERINFO: TIME:           fill:  = 2.974 s, ( 438.31 %)
    Thu May 29 21:41:27 2025 -> SOLVERINFO: TIME:           shift:  = 0.002 s, ( 0.32 %)
    Thu May 29 21:41:27 2025 -> SOLVERINFO: TIME:           update:  = 0.527 s, ( 77.62 %)
    Thu May 29 21:41:27 2025 -> SOLVERINFO: TIME:   Layer cooling calculation time:  = 0.008 s, ( 1.18 %)
    Thu May 29 21:41:27 2025 -> SOLVERINFO: TIME:   Layer copy-paste time:  = 0.133 s, ( 19.56 %)
    Thu May 29 21:41:27 2025 -> SOLVERINFO: TIME:   Layer sample line generation time:  = 0.011 s, ( 1.55 %)
    Thu May 29 21:41:27 2025 -> SOLVERINFO: TIME:   Layer sensor time (including output):  = 0.000 s, ( 0.01 %)
    Thu May 29 21:41:27 2025 -> SOLVERINFO: TIME:   Layer state initialization time:  = 0.000 s, ( 0.04 %)
    Thu May 29 21:41:27 2025 -> SOLVERINFO: TIME:   Layer state output time:  = 0.042 s, ( 6.16 %)
    Thu May 29 21:41:27 2025 -> SOLVERINFO: TIME:   Layer state update time:  = 0.415 s, ( 61.15 %)
    Thu May 29 21:41:27 2025 -> SOLVERINFO: TIME: Total layer time:  = 0.678407 s, (100.000000 %)
    Thu May 29 21:41:27 2025 -> SOLVERINFO: Total ScanLines in layer: 12
    Thu May 29 21:41:27 2025 -> USERINFO: Run Layer : 8
    Thu May 29 21:41:27 2025 -> SOLVERINFO: Total TimeSteps in layer: 338
    Thu May 29 21:41:28 2025 -> SOLVERINFO: Peak memory usage: 728.844 MBytes
    Thu May 29 21:41:28 2025 -> USERINFO: Completed deposit layer 8 (solution layer 8 of 20).
    Thu May 29 21:41:28 2025 -> SOLVERINFO: PercentComplete: 40
    Thu May 29 21:41:28 2025 -> SOLVERINFO: TIME: Layer Temperature map:  = 0.654 s, ( 90.20 %)
    Thu May 29 21:41:28 2025 -> SOLVERINFO: TIME:   FineSolidMap:  = 3.946 s, ( 544.41 %)
    Thu May 29 21:41:28 2025 -> SOLVERINFO: TIME:           fill:  = 3.336 s, ( 460.26 %)
    Thu May 29 21:41:28 2025 -> SOLVERINFO: TIME:           shift:  = 0.002 s, ( 0.34 %)
    Thu May 29 21:41:28 2025 -> SOLVERINFO: TIME:           update:  = 0.606 s, ( 83.55 %)
    Thu May 29 21:41:28 2025 -> SOLVERINFO: TIME:   Layer cooling calculation time:  = 0.006 s, ( 0.81 %)
    Thu May 29 21:41:28 2025 -> SOLVERINFO: TIME:   Layer copy-paste time:  = 0.138 s, ( 19.05 %)
    Thu May 29 21:41:28 2025 -> SOLVERINFO: TIME:   Layer sample line generation time:  = 0.011 s, ( 1.55 %)
    Thu May 29 21:41:28 2025 -> SOLVERINFO: TIME:   Layer sensor time (including output):  = 0.000 s, ( 0.01 %)
    Thu May 29 21:41:28 2025 -> SOLVERINFO: TIME:   Layer state initialization time:  = 0.000 s, ( 0.04 %)
    Thu May 29 21:41:28 2025 -> SOLVERINFO: TIME:   Layer state output time:  = 0.045 s, ( 6.21 %)
    Thu May 29 21:41:28 2025 -> SOLVERINFO: TIME:   Layer state update time:  = 0.453 s, ( 62.54 %)
    Thu May 29 21:41:28 2025 -> SOLVERINFO: TIME: Total layer time:  = 0.724782 s, (100.000000 %)
    Thu May 29 21:41:28 2025 -> SOLVERINFO: Total ScanLines in layer: 14
    Thu May 29 21:41:28 2025 -> USERINFO: Run Layer : 9
    Thu May 29 21:41:28 2025 -> SOLVERINFO: Total TimeSteps in layer: 340
    Thu May 29 21:41:29 2025 -> SOLVERINFO: Peak memory usage: 728.844 MBytes
    Thu May 29 21:41:29 2025 -> USERINFO: Completed deposit layer 9 (solution layer 9 of 20).
    Thu May 29 21:41:29 2025 -> SOLVERINFO: PercentComplete: 45
    Thu May 29 21:41:29 2025 -> SOLVERINFO: TIME: Layer Temperature map:  = 0.935 s, ( 92.86 %)
    Thu May 29 21:41:29 2025 -> SOLVERINFO: TIME:   FineSolidMap:  = 4.662 s, ( 462.75 %)
    Thu May 29 21:41:29 2025 -> SOLVERINFO: TIME:           fill:  = 3.970 s, ( 394.06 %)
    Thu May 29 21:41:29 2025 -> SOLVERINFO: TIME:           shift:  = 0.003 s, ( 0.27 %)
    Thu May 29 21:41:29 2025 -> SOLVERINFO: TIME:           update:  = 0.687 s, ( 68.21 %)
    Thu May 29 21:41:29 2025 -> SOLVERINFO: TIME:   Layer cooling calculation time:  = 0.006 s, ( 0.63 %)
    Thu May 29 21:41:29 2025 -> SOLVERINFO: TIME:   Layer copy-paste time:  = 0.139 s, ( 13.80 %)
    Thu May 29 21:41:29 2025 -> SOLVERINFO: TIME:   Layer sample line generation time:  = 0.015 s, ( 1.50 %)
    Thu May 29 21:41:29 2025 -> SOLVERINFO: TIME:   Layer sensor time (including output):  = 0.000 s, ( 0.01 %)
    Thu May 29 21:41:29 2025 -> SOLVERINFO: TIME:   Layer state initialization time:  = 0.000 s, ( 0.03 %)
    Thu May 29 21:41:29 2025 -> SOLVERINFO: TIME:   Layer state output time:  = 0.045 s, ( 4.48 %)
    Thu May 29 21:41:29 2025 -> SOLVERINFO: TIME:   Layer state update time:  = 0.729 s, ( 72.41 %)
    Thu May 29 21:41:29 2025 -> SOLVERINFO: TIME: Total layer time:  = 1.007442 s, (100.000000 %)
    Thu May 29 21:41:29 2025 -> SOLVERINFO: Total ScanLines in layer: 13
    Thu May 29 21:41:29 2025 -> USERINFO: Run Layer : 10
    Thu May 29 21:41:29 2025 -> SOLVERINFO: Total TimeSteps in layer: 340
    Thu May 29 21:41:30 2025 -> SOLVERINFO: Peak memory usage: 728.844 MBytes
    Thu May 29 21:41:30 2025 -> USERINFO: Completed deposit layer 10 (solution layer 10 of 20).
    Thu May 29 21:41:30 2025 -> SOLVERINFO: PercentComplete: 50
    Thu May 29 21:41:30 2025 -> SOLVERINFO: TIME: Layer Temperature map:  = 0.885 s, ( 92.37 %)
    Thu May 29 21:41:30 2025 -> SOLVERINFO: TIME:   FineSolidMap:  = 5.330 s, ( 556.26 %)
    Thu May 29 21:41:30 2025 -> SOLVERINFO: TIME:           fill:  = 4.555 s, ( 475.37 %)
    Thu May 29 21:41:30 2025 -> SOLVERINFO: TIME:           shift:  = 0.003 s, ( 0.32 %)
    Thu May 29 21:41:30 2025 -> SOLVERINFO: TIME:           update:  = 0.770 s, ( 80.33 %)
    Thu May 29 21:41:30 2025 -> SOLVERINFO: TIME:   Layer cooling calculation time:  = 0.006 s, ( 0.64 %)
    Thu May 29 21:41:30 2025 -> SOLVERINFO: TIME:   Layer copy-paste time:  = 0.139 s, ( 14.53 %)
    Thu May 29 21:41:30 2025 -> SOLVERINFO: TIME:   Layer sample line generation time:  = 0.013 s, ( 1.38 %)
    Thu May 29 21:41:30 2025 -> SOLVERINFO: TIME:   Layer sensor time (including output):  = 0.000 s, ( 0.00 %)
    Thu May 29 21:41:30 2025 -> SOLVERINFO: TIME:   Layer state initialization time:  = 0.000 s, ( 0.03 %)
    Thu May 29 21:41:30 2025 -> SOLVERINFO: TIME:   Layer state output time:  = 0.045 s, ( 4.71 %)
    Thu May 29 21:41:30 2025 -> SOLVERINFO: TIME:   Layer state update time:  = 0.681 s, ( 71.08 %)
    Thu May 29 21:41:30 2025 -> SOLVERINFO: TIME: Total layer time:  = 0.958169 s, (100.000000 %)
    Thu May 29 21:41:30 2025 -> SOLVERINFO: Total ScanLines in layer: 11
    Thu May 29 21:41:30 2025 -> USERINFO: Run Layer : 11
    Thu May 29 21:41:30 2025 -> SOLVERINFO: Total TimeSteps in layer: 339
    Thu May 29 21:41:31 2025 -> SOLVERINFO: Peak memory usage: 728.844 MBytes
    Thu May 29 21:41:31 2025 -> USERINFO: Completed deposit layer 11 (solution layer 11 of 20).
    Thu May 29 21:41:31 2025 -> SOLVERINFO: PercentComplete: 55
    Thu May 29 21:41:31 2025 -> SOLVERINFO: TIME: Layer Temperature map:  = 0.588 s, ( 89.23 %)
    Thu May 29 21:41:31 2025 -> SOLVERINFO: TIME:   FineSolidMap:  = 5.706 s, ( 866.41 %)
    Thu May 29 21:41:31 2025 -> SOLVERINFO: TIME:           fill:  = 4.853 s, ( 736.89 %)
    Thu May 29 21:41:31 2025 -> SOLVERINFO: TIME:           shift:  = 0.003 s, ( 0.50 %)
    Thu May 29 21:41:31 2025 -> SOLVERINFO: TIME:           update:  = 0.847 s, ( 128.61 %)
    Thu May 29 21:41:31 2025 -> SOLVERINFO: TIME:   Layer cooling calculation time:  = 0.005 s, ( 0.82 %)
    Thu May 29 21:41:31 2025 -> SOLVERINFO: TIME:   Layer copy-paste time:  = 0.139 s, ( 21.12 %)
    Thu May 29 21:41:31 2025 -> SOLVERINFO: TIME:   Layer sample line generation time:  = 0.010 s, ( 1.58 %)
    Thu May 29 21:41:31 2025 -> SOLVERINFO: TIME:   Layer sensor time (including output):  = 0.000 s, ( 0.01 %)
    Thu May 29 21:41:31 2025 -> SOLVERINFO: TIME:   Layer state initialization time:  = 0.000 s, ( 0.04 %)
    Thu May 29 21:41:31 2025 -> SOLVERINFO: TIME:   Layer state output time:  = 0.045 s, ( 6.83 %)
    Thu May 29 21:41:31 2025 -> SOLVERINFO: TIME:   Layer state update time:  = 0.387 s, ( 58.82 %)
    Thu May 29 21:41:31 2025 -> SOLVERINFO: TIME: Total layer time:  = 0.658634 s, (100.000000 %)
    Thu May 29 21:41:31 2025 -> SOLVERINFO: Total ScanLines in layer: 12
    Thu May 29 21:41:31 2025 -> USERINFO: Run Layer : 12
    Thu May 29 21:41:31 2025 -> SOLVERINFO: Total TimeSteps in layer: 340
    Thu May 29 21:41:31 2025 -> SOLVERINFO: Peak memory usage: 728.844 MBytes
    Thu May 29 21:41:31 2025 -> USERINFO: Completed deposit layer 12 (solution layer 12 of 20).
    Thu May 29 21:41:31 2025 -> SOLVERINFO: PercentComplete: 60
    Thu May 29 21:41:31 2025 -> SOLVERINFO: TIME: Layer Temperature map:  = 0.737 s, ( 91.17 %)
    Thu May 29 21:41:31 2025 -> SOLVERINFO: TIME:   FineSolidMap:  = 6.232 s, ( 770.40 %)
    Thu May 29 21:41:31 2025 -> SOLVERINFO: TIME:           fill:  = 5.297 s, ( 654.86 %)
    Thu May 29 21:41:31 2025 -> SOLVERINFO: TIME:           shift:  = 0.004 s, ( 0.44 %)
    Thu May 29 21:41:31 2025 -> SOLVERINFO: TIME:           update:  = 0.928 s, ( 114.73 %)
    Thu May 29 21:41:31 2025 -> SOLVERINFO: TIME:   Layer cooling calculation time:  = 0.006 s, ( 0.70 %)
    Thu May 29 21:41:31 2025 -> SOLVERINFO: TIME:   Layer copy-paste time:  = 0.138 s, ( 17.09 %)
    Thu May 29 21:41:31 2025 -> SOLVERINFO: TIME:   Layer sample line generation time:  = 0.011 s, ( 1.31 %)
    Thu May 29 21:41:31 2025 -> SOLVERINFO: TIME:   Layer sensor time (including output):  = 0.000 s, ( 0.01 %)
    Thu May 29 21:41:31 2025 -> SOLVERINFO: TIME:   Layer state initialization time:  = 0.000 s, ( 0.03 %)
    Thu May 29 21:41:31 2025 -> SOLVERINFO: TIME:   Layer state output time:  = 0.045 s, ( 5.57 %)
    Thu May 29 21:41:31 2025 -> SOLVERINFO: TIME:   Layer state update time:  = 0.538 s, ( 66.45 %)
    Thu May 29 21:41:31 2025 -> SOLVERINFO: TIME: Total layer time:  = 0.808871 s, (100.000000 %)
    Thu May 29 21:41:31 2025 -> SOLVERINFO: Total ScanLines in layer: 13
    Thu May 29 21:41:31 2025 -> USERINFO: Run Layer : 13
    Thu May 29 21:41:31 2025 -> SOLVERINFO: Total TimeSteps in layer: 338
    Thu May 29 21:41:32 2025 -> SOLVERINFO: Peak memory usage: 728.844 MBytes
    Thu May 29 21:41:32 2025 -> USERINFO: Completed deposit layer 13 (solution layer 13 of 20).
    Thu May 29 21:41:32 2025 -> SOLVERINFO: PercentComplete: 65
    Thu May 29 21:41:32 2025 -> SOLVERINFO: TIME: Layer Temperature map:  = 0.960 s, ( 92.95 %)
    Thu May 29 21:41:32 2025 -> SOLVERINFO: TIME:   FineSolidMap:  = 6.970 s, ( 675.18 %)
    Thu May 29 21:41:32 2025 -> SOLVERINFO: TIME:           fill:  = 5.953 s, ( 576.62 %)
    Thu May 29 21:41:32 2025 -> SOLVERINFO: TIME:           shift:  = 0.004 s, ( 0.37 %)
    Thu May 29 21:41:32 2025 -> SOLVERINFO: TIME:           update:  = 1.010 s, ( 97.88 %)
    Thu May 29 21:41:32 2025 -> SOLVERINFO: TIME:   Layer cooling calculation time:  = 0.006 s, ( 0.59 %)
    Thu May 29 21:41:32 2025 -> SOLVERINFO: TIME:   Layer copy-paste time:  = 0.139 s, ( 13.48 %)
    Thu May 29 21:41:32 2025 -> SOLVERINFO: TIME:   Layer sample line generation time:  = 0.016 s, ( 1.57 %)
    Thu May 29 21:41:32 2025 -> SOLVERINFO: TIME:   Layer sensor time (including output):  = 0.000 s, ( 0.00 %)
    Thu May 29 21:41:32 2025 -> SOLVERINFO: TIME:   Layer state initialization time:  = 0.000 s, ( 0.03 %)
    Thu May 29 21:41:32 2025 -> SOLVERINFO: TIME:   Layer state output time:  = 0.046 s, ( 4.44 %)
    Thu May 29 21:41:32 2025 -> SOLVERINFO: TIME:   Layer state update time:  = 0.752 s, ( 72.84 %)
    Thu May 29 21:41:32 2025 -> SOLVERINFO: TIME: Total layer time:  = 1.032340 s, (100.000000 %)
    Thu May 29 21:41:32 2025 -> SOLVERINFO: Total ScanLines in layer: 13
    Thu May 29 21:41:32 2025 -> USERINFO: Run Layer : 14
    Thu May 29 21:41:32 2025 -> SOLVERINFO: Total TimeSteps in layer: 341
    Thu May 29 21:41:33 2025 -> SOLVERINFO: Peak memory usage: 728.844 MBytes
    Thu May 29 21:41:33 2025 -> USERINFO: Completed deposit layer 14 (solution layer 14 of 20).
    Thu May 29 21:41:33 2025 -> SOLVERINFO: PercentComplete: 70
    Thu May 29 21:41:33 2025 -> SOLVERINFO: TIME: Layer Temperature map:  = 0.868 s, ( 92.28 %)
    Thu May 29 21:41:33 2025 -> SOLVERINFO: TIME:   FineSolidMap:  = 7.623 s, ( 810.18 %)
    Thu May 29 21:41:33 2025 -> SOLVERINFO: TIME:           fill:  = 6.522 s, ( 693.18 %)
    Thu May 29 21:41:33 2025 -> SOLVERINFO: TIME:           shift:  = 0.004 s, ( 0.44 %)
    Thu May 29 21:41:33 2025 -> SOLVERINFO: TIME:           update:  = 1.093 s, ( 116.19 %)
    Thu May 29 21:41:33 2025 -> SOLVERINFO: TIME:   Layer cooling calculation time:  = 0.006 s, ( 0.66 %)
    Thu May 29 21:41:33 2025 -> SOLVERINFO: TIME:   Layer copy-paste time:  = 0.138 s, ( 14.66 %)
    Thu May 29 21:41:33 2025 -> SOLVERINFO: TIME:   Layer sample line generation time:  = 0.012 s, ( 1.32 %)
    Thu May 29 21:41:33 2025 -> SOLVERINFO: TIME:   Layer sensor time (including output):  = 0.000 s, ( 0.01 %)
    Thu May 29 21:41:33 2025 -> SOLVERINFO: TIME:   Layer state initialization time:  = 0.000 s, ( 0.03 %)
    Thu May 29 21:41:33 2025 -> SOLVERINFO: TIME:   Layer state output time:  = 0.045 s, ( 4.80 %)
    Thu May 29 21:41:33 2025 -> SOLVERINFO: TIME:   Layer state update time:  = 0.666 s, ( 70.80 %)
    Thu May 29 21:41:33 2025 -> SOLVERINFO: TIME: Total layer time:  = 0.940921 s, (100.000000 %)
    Thu May 29 21:41:33 2025 -> SOLVERINFO: Total ScanLines in layer: 10
    Thu May 29 21:41:33 2025 -> USERINFO: Run Layer : 15
    Thu May 29 21:41:33 2025 -> SOLVERINFO: Total TimeSteps in layer: 338
    Thu May 29 21:41:34 2025 -> SOLVERINFO: Peak memory usage: 728.844 MBytes
    Thu May 29 21:41:34 2025 -> USERINFO: Completed deposit layer 15 (solution layer 15 of 20).
    Thu May 29 21:41:34 2025 -> SOLVERINFO: PercentComplete: 75
    Thu May 29 21:41:34 2025 -> SOLVERINFO: TIME: Layer Temperature map:  = 0.614 s, ( 89.33 %)
    Thu May 29 21:41:34 2025 -> SOLVERINFO: TIME:   FineSolidMap:  = 8.029 s, ( 1168.73 %)
    Thu May 29 21:41:34 2025 -> SOLVERINFO: TIME:           fill:  = 6.843 s, ( 996.17 %)
    Thu May 29 21:41:34 2025 -> SOLVERINFO: TIME:           shift:  = 0.004 s, ( 0.65 %)
    Thu May 29 21:41:34 2025 -> SOLVERINFO: TIME:           update:  = 1.177 s, ( 171.38 %)
    Thu May 29 21:41:34 2025 -> SOLVERINFO: TIME:   Layer cooling calculation time:  = 0.005 s, ( 0.71 %)
    Thu May 29 21:41:34 2025 -> SOLVERINFO: TIME:   Layer copy-paste time:  = 0.137 s, ( 19.88 %)
    Thu May 29 21:41:34 2025 -> SOLVERINFO: TIME:   Layer sample line generation time:  = 0.010 s, ( 1.45 %)
    Thu May 29 21:41:34 2025 -> SOLVERINFO: TIME:   Layer sensor time (including output):  = 0.000 s, ( 0.01 %)
    Thu May 29 21:41:34 2025 -> SOLVERINFO: TIME:   Layer state initialization time:  = 0.000 s, ( 0.05 %)
    Thu May 29 21:41:34 2025 -> SOLVERINFO: TIME:   Layer state output time:  = 0.045 s, ( 6.56 %)
    Thu May 29 21:41:34 2025 -> SOLVERINFO: TIME:   Layer state update time:  = 0.417 s, ( 60.68 %)
    Thu May 29 21:41:34 2025 -> SOLVERINFO: TIME: Total layer time:  = 0.686944 s, (100.000000 %)
    Thu May 29 21:41:34 2025 -> SOLVERINFO: Total ScanLines in layer: 12
    Thu May 29 21:41:34 2025 -> USERINFO: Run Layer : 16
    Thu May 29 21:41:34 2025 -> SOLVERINFO: Total TimeSteps in layer: 342
    Thu May 29 21:41:35 2025 -> SOLVERINFO: Peak memory usage: 728.844 MBytes
    Thu May 29 21:41:35 2025 -> USERINFO: Completed deposit layer 16 (solution layer 16 of 20).
    Thu May 29 21:41:35 2025 -> SOLVERINFO: PercentComplete: 80
    Thu May 29 21:41:35 2025 -> SOLVERINFO: TIME: Layer Temperature map:  = 0.767 s, ( 91.33 %)
    Thu May 29 21:41:35 2025 -> SOLVERINFO: TIME:   FineSolidMap:  = 8.578 s, ( 1022.03 %)
    Thu May 29 21:41:35 2025 -> SOLVERINFO: TIME:           fill:  = 7.309 s, ( 870.80 %)
    Thu May 29 21:41:35 2025 -> SOLVERINFO: TIME:           shift:  = 0.005 s, ( 0.57 %)
    Thu May 29 21:41:35 2025 -> SOLVERINFO: TIME:           update:  = 1.261 s, ( 150.20 %)
    Thu May 29 21:41:35 2025 -> SOLVERINFO: TIME:   Layer cooling calculation time:  = 0.006 s, ( 0.67 %)
    Thu May 29 21:41:35 2025 -> SOLVERINFO: TIME:   Layer copy-paste time:  = 0.142 s, ( 16.93 %)
    Thu May 29 21:41:35 2025 -> SOLVERINFO: TIME:   Layer sample line generation time:  = 0.012 s, ( 1.39 %)
    Thu May 29 21:41:35 2025 -> SOLVERINFO: TIME:   Layer sensor time (including output):  = 0.000 s, ( 0.01 %)
    Thu May 29 21:41:35 2025 -> SOLVERINFO: TIME:   Layer state initialization time:  = 0.000 s, ( 0.04 %)
    Thu May 29 21:41:35 2025 -> SOLVERINFO: TIME:   Layer state output time:  = 0.045 s, ( 5.36 %)
    Thu May 29 21:41:35 2025 -> SOLVERINFO: TIME:   Layer state update time:  = 0.562 s, ( 66.95 %)
    Thu May 29 21:41:35 2025 -> SOLVERINFO: TIME: Total layer time:  = 0.839302 s, (100.000000 %)
    Thu May 29 21:41:35 2025 -> SOLVERINFO: Total ScanLines in layer: 14
    Thu May 29 21:41:35 2025 -> USERINFO: Run Layer : 17
    Thu May 29 21:41:35 2025 -> SOLVERINFO: Total TimeSteps in layer: 341
    Thu May 29 21:41:36 2025 -> SOLVERINFO: Peak memory usage: 728.844 MBytes
    Thu May 29 21:41:36 2025 -> USERINFO: Completed deposit layer 17 (solution layer 17 of 20).
    Thu May 29 21:41:36 2025 -> SOLVERINFO: PercentComplete: 85
    Thu May 29 21:41:36 2025 -> SOLVERINFO: TIME: Layer Temperature map:  = 0.912 s, ( 92.72 %)
    Thu May 29 21:41:36 2025 -> SOLVERINFO: TIME:   FineSolidMap:  = 9.265 s, ( 942.07 %)
    Thu May 29 21:41:36 2025 -> SOLVERINFO: TIME:           fill:  = 7.913 s, ( 804.67 %)
    Thu May 29 21:41:36 2025 -> SOLVERINFO: TIME:           shift:  = 0.005 s, ( 0.51 %)
    Thu May 29 21:41:36 2025 -> SOLVERINFO: TIME:           update:  = 1.342 s, ( 136.46 %)
    Thu May 29 21:41:36 2025 -> SOLVERINFO: TIME:   Layer cooling calculation time:  = 0.007 s, ( 0.66 %)
    Thu May 29 21:41:36 2025 -> SOLVERINFO: TIME:   Layer copy-paste time:  = 0.142 s, ( 14.46 %)
    Thu May 29 21:41:36 2025 -> SOLVERINFO: TIME:   Layer sample line generation time:  = 0.018 s, ( 1.82 %)
    Thu May 29 21:41:36 2025 -> SOLVERINFO: TIME:   Layer sensor time (including output):  = 0.000 s, ( 0.00 %)
    Thu May 29 21:41:36 2025 -> SOLVERINFO: TIME:   Layer state initialization time:  = 0.000 s, ( 0.03 %)
    Thu May 29 21:41:36 2025 -> SOLVERINFO: TIME:   Layer state output time:  = 0.045 s, ( 4.59 %)
    Thu May 29 21:41:36 2025 -> SOLVERINFO: TIME:   Layer state update time:  = 0.700 s, ( 71.16 %)
    Thu May 29 21:41:36 2025 -> SOLVERINFO: TIME: Total layer time:  = 0.983443 s, (100.000000 %)
    Thu May 29 21:41:36 2025 -> SOLVERINFO: Total ScanLines in layer: 23
    Thu May 29 21:41:36 2025 -> USERINFO: Run Layer : 18
    Thu May 29 21:41:36 2025 -> SOLVERINFO: Total TimeSteps in layer: 344
    Thu May 29 21:41:36 2025 -> SOLVERINFO: Peak memory usage: 728.844 MBytes
    Thu May 29 21:41:36 2025 -> USERINFO: Completed deposit layer 18 (solution layer 18 of 20).
    Thu May 29 21:41:36 2025 -> SOLVERINFO: PercentComplete: 90
    Thu May 29 21:41:36 2025 -> SOLVERINFO: TIME: Layer Temperature map:  = 0.451 s, ( 88.44 %)
    Thu May 29 21:41:36 2025 -> SOLVERINFO: TIME:   FineSolidMap:  = 9.525 s, ( 1869.67 %)
    Thu May 29 21:41:36 2025 -> SOLVERINFO: TIME:           fill:  = 8.121 s, ( 1594.09 %)
    Thu May 29 21:41:36 2025 -> SOLVERINFO: TIME:           shift:  = 0.005 s, ( 1.05 %)
    Thu May 29 21:41:36 2025 -> SOLVERINFO: TIME:           update:  = 1.394 s, ( 273.68 %)
    Thu May 29 21:41:36 2025 -> SOLVERINFO: TIME:   Layer cooling calculation time:  = 0.012 s, ( 2.29 %)
    Thu May 29 21:41:36 2025 -> SOLVERINFO: TIME:   Layer copy-paste time:  = 0.117 s, ( 22.93 %)
    Thu May 29 21:41:36 2025 -> SOLVERINFO: TIME:   Layer sample line generation time:  = 0.007 s, ( 1.47 %)
    Thu May 29 21:41:36 2025 -> SOLVERINFO: TIME:   Layer sensor time (including output):  = 0.000 s, ( 0.01 %)
    Thu May 29 21:41:36 2025 -> SOLVERINFO: TIME:   Layer state initialization time:  = 0.000 s, ( 0.06 %)
    Thu May 29 21:41:36 2025 -> SOLVERINFO: TIME:   Layer state output time:  = 0.045 s, ( 8.81 %)
    Thu May 29 21:41:36 2025 -> SOLVERINFO: TIME:   Layer state update time:  = 0.269 s, ( 52.87 %)
    Thu May 29 21:41:36 2025 -> SOLVERINFO: TIME: Total layer time:  = 0.509474 s, (100.000000 %)
    Thu May 29 21:41:36 2025 -> SOLVERINFO: Total ScanLines in layer: 10
    Thu May 29 21:41:36 2025 -> USERINFO: Run Layer : 19
    Thu May 29 21:41:36 2025 -> SOLVERINFO: Total TimeSteps in layer: 340
    Thu May 29 21:41:37 2025 -> SOLVERINFO: Peak memory usage: 728.844 MBytes
    Thu May 29 21:41:37 2025 -> USERINFO: Completed deposit layer 19 (solution layer 19 of 20).
    Thu May 29 21:41:37 2025 -> SOLVERINFO: PercentComplete: 95
    Thu May 29 21:41:37 2025 -> SOLVERINFO: TIME: Layer Temperature map:  = 0.576 s, ( 88.59 %)
    Thu May 29 21:41:37 2025 -> SOLVERINFO: TIME:   FineSolidMap:  = 9.890 s, ( 1520.39 %)
    Thu May 29 21:41:37 2025 -> SOLVERINFO: TIME:           fill:  = 8.403 s, ( 1291.81 %)
    Thu May 29 21:41:37 2025 -> SOLVERINFO: TIME:           shift:  = 0.006 s, ( 0.86 %)
    Thu May 29 21:41:37 2025 -> SOLVERINFO: TIME:           update:  = 1.477 s, ( 227.01 %)
    Thu May 29 21:41:37 2025 -> SOLVERINFO: TIME:   Layer cooling calculation time:  = 0.005 s, ( 0.76 %)
    Thu May 29 21:41:37 2025 -> SOLVERINFO: TIME:   Layer copy-paste time:  = 0.140 s, ( 21.54 %)
    Thu May 29 21:41:37 2025 -> SOLVERINFO: TIME:   Layer sample line generation time:  = 0.010 s, ( 1.53 %)
    Thu May 29 21:41:37 2025 -> SOLVERINFO: TIME:   Layer sensor time (including output):  = 0.000 s, ( 0.01 %)
    Thu May 29 21:41:37 2025 -> SOLVERINFO: TIME:   Layer state initialization time:  = 0.000 s, ( 0.04 %)
    Thu May 29 21:41:37 2025 -> SOLVERINFO: TIME:   Layer state output time:  = 0.045 s, ( 6.92 %)
    Thu May 29 21:41:37 2025 -> SOLVERINFO: TIME:   Layer state update time:  = 0.376 s, ( 57.80 %)
    Thu May 29 21:41:37 2025 -> SOLVERINFO: TIME: Total layer time:  = 0.650513 s, (100.000000 %)
    Thu May 29 21:41:37 2025 -> SOLVERINFO: Total ScanLines in layer: 13
    Thu May 29 21:41:37 2025 -> USERINFO: Run Layer : 20
    Thu May 29 21:41:37 2025 -> SOLVERINFO: Total TimeSteps in layer: 340
    Thu May 29 21:41:38 2025 -> SOLVERINFO: Peak memory usage: 728.844 MBytes
    Thu May 29 21:41:38 2025 -> USERINFO: Completed deposit layer 20 (solution layer 20 of 20).
    Thu May 29 21:41:38 2025 -> SOLVERINFO: PercentComplete: 100
    Thu May 29 21:41:38 2025 -> SOLVERINFO: TIME: Layer Temperature map:  = 0.754 s, ( 91.37 %)
    Thu May 29 21:41:38 2025 -> SOLVERINFO: TIME:   FineSolidMap:  = 10.430 s, ( 1263.65 %)
    Thu May 29 21:41:38 2025 -> SOLVERINFO: TIME:           fill:  = 8.863 s, ( 1073.80 %)
    Thu May 29 21:41:38 2025 -> SOLVERINFO: TIME:           shift:  = 0.006 s, ( 0.71 %)
    Thu May 29 21:41:38 2025 -> SOLVERINFO: TIME:           update:  = 1.556 s, ( 188.55 %)
    Thu May 29 21:41:38 2025 -> SOLVERINFO: TIME:   Layer cooling calculation time:  = 0.006 s, ( 0.73 %)
    Thu May 29 21:41:38 2025 -> SOLVERINFO: TIME:   Layer copy-paste time:  = 0.139 s, ( 16.83 %)
    Thu May 29 21:41:38 2025 -> SOLVERINFO: TIME:   Layer sample line generation time:  = 0.011 s, ( 1.36 %)
    Thu May 29 21:41:38 2025 -> SOLVERINFO: TIME:   Layer sensor time (including output):  = 0.000 s, ( 0.01 %)
    Thu May 29 21:41:38 2025 -> SOLVERINFO: TIME:   Layer state initialization time:  = 0.000 s, ( 0.03 %)
    Thu May 29 21:41:38 2025 -> SOLVERINFO: TIME:   Layer state output time:  = 0.045 s, ( 5.47 %)
    Thu May 29 21:41:38 2025 -> SOLVERINFO: TIME:   Layer state update time:  = 0.552 s, ( 66.93 %)
    Thu May 29 21:41:38 2025 -> SOLVERINFO: TIME: Total layer time:  = 0.825421 s, (100.000000 %)
    Thu May 29 21:41:38 2025 -> USERINFO: Total time steps simulated: 6800
    Thu May 29 21:41:38 2025 -> SOLVERINFO: TIME: Total Solver time:  = 66.782 s, ( 100.00 %)
    Thu May 29 21:41:38 2025 -> SOLVERINFO: TIME:   Explicit solution generation:  = 50.294 s, ( 75.31 %)
    Thu May 29 21:41:38 2025 -> SOLVERINFO: TIME:   Hatch generation time:  = 0.002 s, ( 0.00 %)
    Thu May 29 21:41:38 2025 -> SOLVERINFO: TIME:   Output states time:  = 0.813 s, ( 1.22 %)
    Thu May 29 21:41:38 2025 -> SOLVERINFO: TIME:   Output strains time:  = 0.000 s, ( 0.00 %)
    Thu May 29 21:41:38 2025 -> SOLVERINFO: TIME:   State calculation time:  = 10.668 s, ( 15.97 %)
    Thu May 29 21:41:38 2025 -> SOLVERINFO: TIME:   State layer initialization time:  = 0.002 s, ( 0.00 %)
    Thu May 29 21:41:38 2025 -> SOLVERINFO: TIME:   Strain calculation time:  = 0.000 s, ( 0.00 %)
    Thu May 29 21:41:38 2025 -> SOLVERINFO: TIME:   Temperature map:  = 3.113 s, ( 4.66 %)
    Thu May 29 21:41:38 2025 -> SOLVERINFO: TIME:           Add temperature time:  = 0.319 s, ( 0.48 %)
    Thu May 29 21:41:38 2025 -> SOLVERINFO: TIME:           Blending assembler:  = 0.243 s, ( 0.36 %)
    Thu May 29 21:41:38 2025 -> SOLVERINFO: TIME:                   Get solution for step time:  = 0.150 s, ( 0.23 %)
    Thu May 29 21:41:38 2025 -> SOLVERINFO: TIME:                   Initialize scan line time:  = 0.092 s, ( 0.14 %)
    Thu May 29 21:41:38 2025 -> SOLVERINFO: TIME:                           State map slicing time:  = 0.018 s, ( 0.03 %)
    Thu May 29 21:41:38 2025 -> SOLVERINFO: TIME:                           Transition distance BCG initialize scan line time:  = 0.074 s, ( 0.11 %)
    Thu May 29 21:41:38 2025 -> SOLVERINFO: TIME:                                   Find transition distances time:  = 0.044 s, ( 0.07 %)
    Thu May 29 21:41:38 2025 -> SOLVERINFO: TIME:                                   Find transition nodes time:  = 0.029 s, ( 0.04 %)
    Thu May 29 21:41:38 2025 -> SOLVERINFO: TIME:                                   State copy time:  = 0.000 s, ( 0.00 %)
    Thu May 29 21:41:38 2025 -> SOLVERINFO: TIME:           Cooling calculation time:  = 0.137 s, ( 0.20 %)
    Thu May 29 21:41:38 2025 -> SOLVERINFO: TIME:           Cooling calculator:  = 5.425 s, ( 8.12 %)
    Thu May 29 21:41:38 2025 -> SOLVERINFO: TIME:           Generate-heat time:  = 2.738 s, ( 4.10 %)
    Thu May 29 21:41:38 2025 -> SOLVERINFO: TIME:           Meltpool time:  = 0.764 s, ( 1.14 %)
    Thu May 29 21:41:38 2025 -> SOLVERINFO: TIME:           Sample line building:  = 0.237 s, ( 0.35 %)
    Thu May 29 21:41:38 2025 -> SOLVERINFO: TIME:                   Long copy:  = 0.000 s, ( 0.00 %)
    Thu May 29 21:41:38 2025 -> SOLVERINFO: TIME:                           Cooling timer:  = 0.000 s, ( 0.00 %)
    Thu May 29 21:41:38 2025 -> SOLVERINFO: TIME:                                   Cooling calculator:  = 0.000 s, ( 0.00 %)
    Thu May 29 21:41:38 2025 -> SOLVERINFO: TIME:                           Resize timer:  = 0.000 s, ( 0.00 %)
    Thu May 29 21:41:38 2025 -> SOLVERINFO: TIME:                           Translate timer:  = 0.000 s, ( 0.00 %)
    Thu May 29 21:41:38 2025 -> SOLVERINFO: TIME:                   Short copy:  = 0.233 s, ( 0.35 %)
    Thu May 29 21:41:38 2025 -> SOLVERINFO: TIME:           SensorManager:  = 0.000 s, ( 0.00 %)
    Thu May 29 21:41:38 2025 -> SOLVERINFO: TIME:                   IO:  = 0.000 s, ( 0.00 %)
    Thu May 29 21:41:38 2025 -> SOLVERINFO: TIME:           Virtual sensor_time (including output):  = 0.001 s, ( 0.00 %)
    Thu May 29 21:41:38 2025 -> SOLVERINFO: End Run
    Thu May 29 21:41:38 2025 -> USERINFO: Thermal Solver run completed
    Thu May 29 21:41:38 2025 -> SOLVERINFO: License successfully returned.







.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (1 minutes 10.213 seconds)


.. _sphx_glr_download_examples_gallery_examples_01_additive_porosity.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 01_additive_porosity.ipynb <01_additive_porosity.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 01_additive_porosity.py <01_additive_porosity.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: 01_additive_porosity.zip <01_additive_porosity.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
